tests/baselines/reference/genericArrayExtenstions.errors.txt
tests/cases/compiler/genericArrayExtenstions.ts(1,22): error TS2420: Class 'ObservableArray<T>' incorrectly implements interface 'T[]'.
  Property 'indexOf' is missing in type 'ObservableArray<T>'.


==== tests/cases/compiler/genericArrayExtenstions.ts (1 errors) ====
    export declare class ObservableArray<T> implements Array<T> { // MS.Entertainment.ObservableArray
                         ~~~~~~~~~~~~~~~
!!! error TS2420: Class 'ObservableArray<T>' incorrectly implements interface 'T[]'.
!!! error TS2420:   Property 'indexOf' is missing in type 'ObservableArray<T>'.
    concat<U extends T[]>(...items: U[]): T[];
    concat(...items: T[]): T[];
    }
    